--- a/discord/index.html
+++ b/discord/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script src="discordJSONreader.js" defer></script>
+    <script src="JSONreader.js" defer></script>
 </head>
 <body class="theme-darker">
     <button onclick="openFile()">Open JSON File</button>
